--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typeorm": "0.3.17"
   },
   "devDependencies": {
+    "@nestjs/config": "3.0.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
