--- a/package.json
+++ b/package.json
@@ -17,33 +17,33 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./typeOrm.config.ts",
+    "typeorm:generate-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:generate ./migrations/$npm_config_name",
+    "typeorm:create-migration": "npm run typeorm -- migration:create ./migrations/$npm_config_name",
+    "typeorm:revert-migration": "npm run typeorm -- -d ./typeOrm.config.ts migration:revert"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.5",
-    "@nestjs/config": "1.0.1",
-    "@nestjs/core": "^7.6.5",
-    "@nestjs/event-emitter": "^0.0.3",
-    "@nestjs/jwt": "^7.2.0",
-    "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.5",
-    "@nestjs/schedule": "^0.4.1",
-    "@nestjs/serve-static": "^2.1.4",
-    "@nestjs/swagger": "^4.8.0",
-    "@nestjs/throttler": "2.0.0",
-    "@nestjs/typeorm": "^7.1.5",
-    "@nestjsx/crud": "^4.6.2",
-    "@nestjsx/crud-typeorm": "^4.6.2",
-    "class-transformer": "^0.3.1",
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "3.0.0",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "3.0.3",
+    "@nestjs/typeorm": "^10.0.0",
+    "@nestjsx/crud": "^5.0.0-alpha.3",
+    "@nestjsx/crud-typeorm": "5.0.0-alpha.3",
+    "axios": "^1.5.0",
     "class-validator": "0.14.0",
+    "mysql2": "^3.6.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "0.3.17"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
-    "@nestjs/config": "3.0.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
